@@ -9,6 +9,7 @@ type ServerResponse struct {
 // LoginResponse is sent to the client when they successfully log in.
 type LoginResponse struct {
 	LoggedInAs UserProfile
+	Email      string
 }
 
 // LogoutResponse is sent to the client when they succesfully log out.
@@ -24,6 +25,12 @@ type UserProfile struct {
 	IsDomainModerator bool
 	IsGlobalModerator bool
 	ProfileBlurb      string
+}
+
+// ProfileUpdateResponse is dispatched to the client when a change to their profile has been realized on the server.
+type ProfileUpdateResponse struct {
+	LoggedInAs UserProfile
+	Email      string
 }
 
 // Message is a general communication entity used to provide feedback to a client that some action has completed (or not completed) on requests where the client has not asked for any particular data.
