@@ -1,6 +1,8 @@
 package communication
 
-import "encoding/json"
+import (
+	"encoding/json"
+)
 
 // GetMessage is a convenience method for getting a communication.Message wrapped as a communication.ServerResponse for pushing to controller responses.
 func GetMessage(success bool, text string) ServerResponse {
