@@ -8,6 +8,7 @@ import (
 
 	"github.com/comment-anything/ca-back-end/communication"
 	"github.com/comment-anything/ca-back-end/database/generated"
+	"github.com/comment-anything/ca-back-end/util"
 )
 
 // HandleCommandChangeEmail on a GuestController will cause an error message to be appended to the next response of the controller.
@@ -16,21 +17,30 @@ func (c *GuestController) HandleCommandChangeEmail(comm *communication.ChangeEma
 }
 
 // HandleCommandChangeEmail on a UserController will attempt to change the user's email in the database and push an appropriate message depending on the result.
-func (c *MemberControllerBase) HandleCommandChangeEmail(comm *communication.ChangeEmail, server *Server) {
+func (c *MemberControllerBase) HandleCommandChangeEmail(comm *communication.ChangeEmail, serv *Server) {
+
+	ok, why := util.ValidateEmail(comm.NewEmail)
+
 	if comm.Password != c.User.Password {
 		c.nextResponse = append(c.nextResponse, communication.GetMessage(false, "You must supply your password to change your email."))
+	} else if !ok {
+		c.AddMessage(ok, why)
 	} else {
 		params := generated.UpdateUserEmailParams{}
 		params.ID = c.User.ID
 		params.Email = comm.NewEmail
-		err := server.DB.Queries.UpdateUserEmail(context.Background(), params)
-		if err == nil {
-			c.nextResponse = append(c.nextResponse, communication.GetMessage(false, "Failed to change email."))
+		err := serv.DB.Queries.UpdateUserEmail(context.Background(), params)
+		if err != nil {
+			c.AddMessage(false, "Failed to change email.")
 		} else {
-			c.nextResponse = append(c.nextResponse, communication.GetMessage(true, "Email updated."))
+			c.AddMessage(true, "Email updated.")
 			c.User.Email = comm.NewEmail
+			prof := serv.GetProfile(c.User)
+			profResponse := communication.ProfileUpdateResponse{}
+			profResponse.Email = comm.NewEmail
+			profResponse.LoggedInAs = prof
+			c.AddWrapped("ProfileUpdateResponse", profResponse)
 		}
-
 	}
 }
 
